# whisper.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: docker.yml
deploy/: Dockerfile  entrypoint.sh
src/: lib.rs
src/config/: service_config.rs  service_params.rs  whisper_config.rs
src/service/: whisper_service.rs
src/service/config/: service_config.rs  service_params.rs
src/service/engine/: shared_state.rs
src/service/shared_state/: shared_state.rs
src/vad/: energy_vad.rs
src/whisper/: whisper_callback.rs  whisper_engine.rs  whisper_helper.rs
